# depth-learning

./: .gitignore  Cargo.toml  DATASET_FIX_SUMMARY.md  DIFFICULTY_CHANGES.md  ECHOSOUNDER_IMPROVEMENTS.md  ECHOSOUNDER_QUICK_START.md  GENERATE_DATASET.md  README.md  REGENERATE_DATASETS.md
.git-rewrite/: backup-refs  commit  index  message  parse  revs
.github/workflows/: ci.yml
.qwen/: settings.json
dataset/: frame_0118_meta.json  frame_0282_meta.json  frame_0581_meta.json
dataset/easy/: frame_0001_meta.json  frame_0002_meta.json  frame_0003_meta.json  frame_0004_meta.json  frame_0005_meta.json  frame_0006_meta.json  frame_0007_meta.json  frame_0008_meta.json  frame_0009_meta.json  frame_0010_meta.json  frame_0011_meta.json  frame_0012_meta.json  frame_0013_meta.json  (+1778 more)
ml/: BUG_FIX_SUMMARY.md  COUNTING_TASK.md  EXPERIMENT_RUNNER.md  README.md  REFACTORING_PLAN.md  analyze_dataset.py  config.py  data.py  debug_data.py  evaluate_acoustic_only.py  evaluate_counting_all.py  experiment.py  generate_table.py  main.py  requirements.txt  results.json  serve.py  shortcut_test.py  sigreg_search_results.txt  table.tex  table_acoustic.tex  table_combined.tex  table_full.tex  table_presence.tex  train.py  train_all_models.bat  train_all_models.ps1  train_all_models.sh  train_counting_all.bat  train_counting_all.ps1  train_counting_all.sh  train_decoder.py  train_fusion.py  train_jepa_sigreg.py  train_mae.py  train_shortcut.py  train_translator.py  trainers.py  trainers_advanced.py  trainers_jepa_sigreg.py  (+2 more)
src/: echosounder_improvements.rs  main.rs
wandb/: latest-run
(+7074 files in other folders)
