[package]
name = "depth-learning"
version = "0.1.0"
edition = "2021"
default-run = "simulation"

[dependencies]
bevy = "0.15.2"
bevy_egui = "0.31.1"
image = "0.25.9"
rand = "0.8.5"
reqwest = { version = "0.13.2", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
crossbeam-channel = "0.5"
base64 = "0.22"
gltf = "1.4.1"
urlencoding = "2.1"

[[bin]]
name = "simulation"
path = "src/main.rs"

[[bin]]
name = "generate_dataset"
path = "src/bin/generate_dataset.rs"
